--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,12 +21,13 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                    <!-- 修改导航栏 home 2 首页-->
                         <a href="{{ site.baseurl }}/">首页</a>
                     </li>
                     {% for page in site.pages %}
                     {% if page.title and page.hide-in-nav != true %}
                     <li>
-                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+                        <a href="{{ page.url | prepend: site.baseurl }}">{{ page.navtitle }}</a>
                     </li>
                     {% endif %}
                     {% endfor %}
