--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                    <!-- 修改导航栏 home 2 首页-->
+                    <!-- 修改导航栏 home to 首页-->
                         <a href="{{ site.baseurl }}/">首页</a>
                     </li>
                     {% for page in site.pages %}
