--- a/_includes/gittalk.html
+++ b/_includes/gittalk.html
@@ -7,11 +7,11 @@
     var gitalk = new Gitalk({
  
     // gitalk的主要参数
-        clientID: ab95a9a4c8cfccb23008,
+        clientID: 'ab95a9a4c8cfccb23008',
         clientSecret: '745de2e970088305fcb448d176671570d3e69404',
-        repo: https://Awnway.github.io,
-        owner: Awnway,
-        admin: [Awnway],
+        repo: 'BlogComment',
+        owner: 'Awnway',
+        admin: ['Awnway'],
         id: md5(location.pathname),
         
     });
