--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,6 +61,13 @@ layout: default
                 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
                 <!-- 网易云跟帖 评论框 end -->
                 {% endif %}
+                
+                {% if site.gittalk_comment %}
+                <!-- gittalk 评论框 start -->
+                <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+                <!-- gittalk 评论框 end -->
+                {% endif %}
+                
             </div>  
 
     <!-- Side Catalog Container -->
@@ -102,7 +109,28 @@ layout: default
 {% endif %}
 
 {% if site.gittalk_comment %}
-  {% include gittalk.html %}
+<!-- gittalk 评论-->
+
+  <!-- Link Gitalk 的支持文件  -->
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script> 
+<script src="/js/md5.min.js"></script>
+<div id="gitalk-container"></div>     
+<script type="text/javascript">
+    var gitalk = new Gitalk({
+ 
+    // gitalk的主要参数
+        clientID: 'ab95a9a4c8cfccb23008',
+        clientSecret: '745de2e970088305fcb448d176671570d3e69404',
+        repo: 'BlogComment',
+        owner: 'Awnway',
+        admin: ['Awnway'],
+        id: md5(location.pathname),
+        
+    });
+    gitalk.render('gitalk-container');
+</script> 
+<!-- Gitalk end -->
 {% endif %}
 
 
