--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,6 +31,14 @@
                     </li>
                     {% endif %}
                     {% endfor %}
+                    <li>
+                    <!-- link到backwit blog-->
+                        <a href="https://backwit.github.io">link</a>
+                    </li>
+                    <li>
+                    <!-- link到backwit blog-->
+                        <a href="{{ site.baseurl }}/backwit">demo</a>
+                    </li>
                 </ul>
             </div>
         </div>
