change gitalk repo to self

--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -9,7 +9,7 @@
     // gitalk的主要参数
         clientID: 'ab95a9a4c8cfccb23008',
         clientSecret: '745de2e970088305fcb448d176671570d3e69404',
-        repo: 'BlogComment',
+        repo: 'Awnway.github.io',
         owner: 'Awnway',
         admin: ['Awnway'],
         id: md5(location.pathname),
